# hwSSPslam

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  FINDINGS.md  PROTOCOL.md  README.md  RESULTS.md  aces_traj_bounded.npz  aces_traj_csm.npz  aces_traj_icp.npz  aces_traj_rbpf.npz  baseline_csm.py  baseline_icp.py  baseline_rbpf.py  bench_loop.py  experiments.py  fr079_traj_bounded.npz  fr079_traj_csm.npz  fr079_traj_icp.npz  fr079_traj_rbpf.npz  intel_traj.npz  intel_traj_bounded.npz  intel_traj_csm.npz  intel_traj_icp.npz  intel_traj_loop.npz  intel_traj_rbpf.npz  mit_traj_bounded.npz  mit_traj_hy4_dr5.npz  mit_traj_hy4_r4dr.npz  mit_traj_hy4_r4final.npz  mit_traj_hy4_r4inst.npz  mit_traj_hy4_r4ship.npz  mit_traj_hy4_r5base.npz  mit_traj_hy4_r5pcm.npz  msg.txt  pyproject.toml  requirements.txt  rpe.py  scratch_belgioioso.py  ssp_adaptmap.py  (+42 more)
SotA/: backends_lifelong.md  fpga_design.md  golden_dithering.md  spectral_registration.md
archive/: export_data.py  ssp_bounded_task8.py  ssp_bounded_task8_base.py
baselines/: __init__.py  csm.py  icp.py  rbpf.py  scancontext.py
data/: README.md  fetch_datasets.sh
demo/: export_replay.py  index.html
docs/: ENCODINGS.md  FINDINGS.md  PROTOCOL.md  RESTRUCTURE-MAP.md  RESULTS.md
experiments/: README.md  __init__.py  adaptmap.py  angles.py  aniso.py  aniso_mit.py  belief.py  bfc.py  cascade.py  delayfuse.py  deploy6d.py  detzoo.py  flow.py  frontguard.py  frontsys.py  frozenbank.py  frozenbank2.py  hexreal.py  hier.py  hiergraph.py  hybrid.py  iteralign.py  krylov.py  lattice3d.py  lidar6d.py  lidarscale.py  mit_gtverify.py  (+17 more)
(+200 files in other folders)
